<resources>
    <string name="app_name">Age In...</string>
    <string name="calculateYour">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="inMinutes">IN MINUTES</string>
    <string name="selectDate">SELECT DATE</string>
    <string name="date">Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="in_minute_till_date">In Minute Till Date</string>
</resources>