<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/layoutBackground"
        android:padding="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateYour"
        android:textSize="25sp"
        android:textColor="@color/primaryBlue"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="25sp"
            android:padding="10dp"
            android:background="@color/primaryBlue"
            android:textColor="@color/textLightBlue"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inMinutes"
            android:textSize="25sp"
            android:textColor="@color/primaryBlue"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/selectDate"
            android:textSize="18sp"
            android:backgroundTint="@color/buttonBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/selectDateButton"
             />

    <TextView
        android:id="@+id/selectedDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        android:textSize="26sp" />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/selected_date"
              android:textSize="18sp"
              android:textColor="@color/labelColour" />

    <TextView
        android:id="@+id/inMinutesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textSize="36sp" />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/in_minutes"
              android:textSize="18sp"
              android:textColor="@color/labelColour" />
</LinearLayout>